Refactoring DZIEN_2: połączenie batch+streaming, usunięcie duplikatów, print→display
DZIEN_2 Lakehouse Delta Lake:
- Połączono 02_batch_data_ingestion + 03_streaming → 02_Lakeflow_Connection (83 komórki)
- Przemianowano 04→03_medallion_architecture, 05→04_optimization
- 03_medallion: usunięto 17 duplikatów (92→75 komórek), naprawiono tytuł
- 04_optimization: usunięto 38 duplikatów (115→77 komórek)
- Zamieniono print()→display() we wszystkich notebookach
- Zaktualizowano konteksty i referencje

DZIEN_1 & DZIEN_3:
- Drobne poprawki zgodności z NOTEBOOK_TEMPLATE

--- a/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
@@ -1022,9 +1022,9 @@
    },
    "outputs": [],
    "source": [
-    "# Rozkład wartości dla kolumny 'status'\n",
-    "print(\"\\n Rozkład wartości w kolumnie 'status':\")\n",
-    "orders_df.groupBy(\"customer_id\").count().orderBy(\"count\", ascending=False).display()"
+    "# Rozkład zamówień według metody płatności\n",
+    "print(\"\\n Rozkład zamówień według metody płatności (payment_method):\")\n",
+    "orders_df.groupBy(\"payment_method\").count().orderBy(\"count\", ascending=False).display()"
    ]
   },
   {
@@ -1045,9 +1045,9 @@
    },
    "outputs": [],
    "source": [
-    "# Rozkład wartości dla kolumny 'status'\n",
-    "print(\"\\n Rozkład wartości w kolumnie 'status':\")\n",
-    "orders_auto_df.groupBy(\"customer_id\").count().orderBy(\"count\", ascending=False).display()"
+    "# Top 10 klientów z największą liczbą zamówień\n",
+    "print(\"\\n Top 10 klientów z największą liczbą zamówień:\")\n",
+    "orders_auto_df.groupBy(\"customer_id\").count().orderBy(\"count\", ascending=False).limit(10).display()"
    ]
   },
   {
@@ -1071,7 +1071,7 @@
     "**Zadanie:**\n",
     "1. Policz liczbę unikalnych klientów w DataFrame `orders_auto_df`\n",
     "2. Znajdź wartość maksymalną i minimalną w kolumnie `total_amount`\n",
-    "3. Policz liczbę zamówień w każdym statusie\n",
+    "3. Policz liczbę zamówień według metody płatności (`payment_method`)\n",
     "\n",
     "**Hint:** Użyj `.select()`, `.distinct()`, `.count()`, `.agg()`, `.groupBy()`"
    ]
@@ -1095,15 +1095,15 @@
    "outputs": [],
    "source": [
     "# TODO: Policz liczbę unikalnych customer_id\n",
-    "# unique_customers = orders_auto_df.select(\"customer_id\").____().count()\n",
+    "# unique_customers = orders_auto_df.select(\"customer_id\").distinct().count()\n",
     "# print(f\"Liczba unikalnych klientów: {unique_customers}\")\n",
     "\n",
     "# TODO: Znajdź min i max total_amount\n",
     "# from pyspark.sql.functions import min, max\n",
-    "# orders_auto_df.select(min(\"____\"), __(\"total_amount\")).display()\n",
+    "# orders_auto_df.select(min(\"total_amount\"), max(\"total_amount\")).display()\n",
     "\n",
-    "# TODO: Policz zamówienia według statusu\n",
-    "# orders_auto_df.groupBy(\"____\").count().display()\n",
+    "# TODO: Policz zamówienia według metody płatności\n",
+    "# orders_auto_df.groupBy(\"payment_method\").count().display()\n",
     "\n",
     "pass"
    ]
