--- a/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
@@ -5,7 +5,7 @@
    "id": "3a373df9",
    "metadata": {},
    "source": [
-    "# Delta Lake Operations - Demo\n",
+    "# Delta Lake Operations\n",
     "\n",
     "**Cel szkoleniowy:** Zrozumienie fundamentów Delta Lake i praktyczne zastosowanie operacji CRUD, Time Travel, optymalizacji i Change Data Feed\n",
     "\n",
@@ -28,10 +28,10 @@
     "- **Dzień szkolenia**: Dzień 2 - Lakehouse & Delta Lake\n",
     "- **Typ notebooka**: Demo\n",
     "- **Wymagania techniczne**:\n",
-    "  - Databricks Runtime 13.0+ (zalecane: 14.3 LTS)\n",
+    "  - Databricks Runtime 16.4 LTS lub 17.3 LTS (Spark 4.0)\n",
     "  - Unity Catalog włączony\n",
     "  - Uprawnienia: CREATE TABLE, CREATE SCHEMA, SELECT, MODIFY\n",
-    "  - Klaster: Standard z 2-4 workers"
+    "  - Klaster: Standard z 2-4 workers (lub Serverless Compute)"
    ]
   },
   {
@@ -240,10 +240,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Próba wstawienia danych z niepoprawnym schematem\n",
+    "# Próba wstawienia danych z niepoprawnym schematem (brakuje kolumn)\n",
     "invalid_data = spark.createDataFrame([\n",
-    "    (999, \"Test Customer\", 25.5, \"invalid_email\", \"2023-01-01\")  # age jako float zamiast int\n",
-    "], [\"customer_id\", \"name\", \"age\", \"email\", \"registration_date\"])\n",
+    "    (\"CUST999999\", \"Test\", \"Customer\", \"invalid_email\", \"+48 123 456 789\")  # Brakuje city, state, country, registration_date, customer_segment\n",
+    "], [\"customer_id\", \"first_name\", \"last_name\", \"email\", \"phone\"])\n",
     "\n",
     "try:\n",
     "    invalid_data.write \\\n",
@@ -253,7 +253,7 @@
     "except Exception as e:\n",
     "    display(\n",
     "        spark.createDataFrame([\n",
-    "            (\"Schema enforcement w działaniu\", str(e)[:100] + \"...\")\n",
+    "            (\"Schema enforcement w działaniu\", str(e)[:200] + \"...\")\n",
     "        ], [\"message\", \"error\"])\n",
     "    )"
    ]
@@ -374,11 +374,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dane z dodatkową kolumną\n",
+    "# Dane z dodatkową kolumną (customer_tier)\n",
     "extended_customers = spark.createDataFrame([\n",
-    "    (1001, \"New Customer\", 30, \"new@example.com\", \"2023-12-01\", \"Premium\"),\n",
-    "    (1002, \"Another Customer\", 25, \"another@example.com\", \"2023-12-02\", \"Standard\")\n",
-    "], [\"customer_id\", \"name\", \"age\", \"email\", \"registration_date\", \"customer_tier\"])"
+    "    (\"CUST010001\", \"New\", \"Customer\", \"new@example.com\", \"+48 111 222 333\", \"Warsaw\", \"MZ\", \"Poland\", \"2023-12-01\", \"Basic\", \"Premium\"),\n",
+    "    (\"CUST010002\", \"Another\", \"Customer\", \"another@example.com\", \"+48 444 555 666\", \"Krakow\", \"MP\", \"Poland\", \"2023-12-02\", \"Premium\", \"Standard\")\n",
+    "], [\"customer_id\", \"first_name\", \"last_name\", \"email\", \"phone\", \"city\", \"state\", \"country\", \"registration_date\", \"customer_segment\", \"customer_tier\"])"
    ]
   },
   {
@@ -425,7 +425,7 @@
     "# Weryfikuj dane - nowa kolumna ma NULL dla starych rekordów\n",
     "display(\n",
     "    spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_delta\")\n",
-    "    .select(\"customer_id\", \"name\", \"customer_tier\")\n",
+    "    .select(\"customer_id\", \"first_name\", \"last_name\", \"customer_tier\")\n",
     "    .orderBy(\"customer_id\")\n",
     ")"
    ]
@@ -437,15 +437,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dodaj CHECK constraint: Wiek musi być dodatni\n",
+    "# Dodaj CHECK constraint: customer_id musi zaczynać się od CUST\n",
     "try:\n",
     "    spark.sql(f\"\"\"\n",
     "        ALTER TABLE {CATALOG}.{BRONZE_SCHEMA}.customers_delta\n",
-    "        ADD CONSTRAINT valid_age CHECK (age > 0)\n",
+    "        ADD CONSTRAINT valid_customer_id CHECK (customer_id LIKE 'CUST%')\n",
     "    \"\"\")\n",
-    "    print(\"Constraint 'valid_age' dodany pomyślnie.\")\n",
+    "    print(\"Constraint 'valid_customer_id' dodany pomyślnie.\")\n",
     "except Exception as e:\n",
-    "    print(f\"Informacja: {e}\")\n"
+    "    print(f\"Informacja: {e}\")"
    ]
   },
   {
@@ -455,14 +455,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Próba wstawienia błędnych danych (wiek = -5)\n",
+    "# Próba wstawienia błędnych danych (customer_id nie zaczyna się od CUST)\n",
     "try:\n",
     "    spark.sql(f\"\"\"\n",
-    "        INSERT INTO {CATALOG}.{BRONZE_SCHEMA}.customers_delta (customer_id, name, age)\n",
-    "        VALUES (9999, 'Invalid Age Customer', -5)\n",
+    "        INSERT INTO {CATALOG}.{BRONZE_SCHEMA}.customers_delta (customer_id, first_name, last_name, email, phone, city, state, country, registration_date, customer_segment)\n",
+    "        VALUES ('INVALID123', 'Bad', 'Customer', 'bad@example.com', '+48 000 000 000', 'Test', 'TS', 'Poland', '2023-01-01', 'Basic')\n",
     "    \"\"\")\n",
     "except Exception as e:\n",
-    "    print(f\"Oczekiwany błąd Data Quality:\\n{str(e)[:300]}...\")\n"
+    "    print(f\"Oczekiwany błąd Data Quality:\\n{str(e)[:300]}...\")"
    ]
   },
   {
@@ -470,8 +470,8 @@
    "id": "af585f2f",
    "metadata": {},
    "source": [
-    "Constraint został dodany. Teraz spróbujmy wstawić dane, które go naruszają (wiek = -5). \n",
-    "Oczekujemy, że Delta Lake zablokuje tę operację i zwróci błąd `InvariantViolationException` lub `CheckConstraintViolationException`.\n"
+    "Constraint został dodany. Teraz spróbujmy wstawić dane, które go naruszają (customer_id nie zaczyna się od 'CUST'). \n",
+    "Oczekujemy, że Delta Lake zablokuje tę operację i zwróci błąd `CheckConstraintViolation`."
    ]
   },
   {
@@ -687,9 +687,10 @@
     "# INSERT nowych klientów\n",
     "spark.sql(f\"\"\"\n",
     "    INSERT INTO {CATALOG}.{BRONZE_SCHEMA}.customers_delta\n",
+    "    (customer_id, first_name, last_name, email, phone, city, state, country, registration_date, customer_segment, customer_tier)\n",
     "    VALUES \n",
-    "        (2001, 'Insert Customer 1', 28, 'insert1@example.com', '2023-12-10', 'Gold'),\n",
-    "        (2002, 'Insert Customer 2', 35, 'insert2@example.com', '2023-12-11', 'Silver')\n",
+    "        ('CUST020001', 'Insert', 'Customer1', 'insert1@example.com', '+48 111 111 111', 'Warsaw', 'MZ', 'Poland', '2023-12-10', 'Premium', 'Gold'),\n",
+    "        ('CUST020002', 'Insert', 'Customer2', 'insert2@example.com', '+48 222 222 222', 'Gdansk', 'PM', 'Poland', '2023-12-11', 'Basic', 'Silver')\n",
     "\"\"\")"
    ]
   },
@@ -711,7 +712,7 @@
     "# Weryfikuj wstawienie\n",
     "display(\n",
     "    spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_delta\")\n",
-    "    .filter(F.col(\"customer_id\") >= 2000)\n",
+    "    .filter(F.col(\"customer_id\").like(\"CUST02%\"))\n",
     "    .orderBy(\"customer_id\")\n",
     ")"
    ]
@@ -737,7 +738,7 @@
     "spark.sql(f\"\"\"\n",
     "    UPDATE {CATALOG}.{BRONZE_SCHEMA}.customers_delta\n",
     "    SET customer_tier = 'Platinum'\n",
-    "    WHERE customer_id IN (1001, 2001)\n",
+    "    WHERE customer_id IN ('CUST010001', 'CUST020001')\n",
     "\"\"\")"
    ]
   },
@@ -784,7 +785,7 @@
     "# DELETE specific customer\n",
     "spark.sql(f\"\"\"\n",
     "    DELETE FROM {CATALOG}.{BRONZE_SCHEMA}.customers_delta\n",
-    "    WHERE customer_id = 2002\n",
+    "    WHERE customer_id = 'CUST020002'\n",
     "\"\"\")"
    ]
   },
@@ -805,12 +806,12 @@
    "source": [
     "# Weryfikuj usunięcie\n",
     "deleted_check = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_delta\") \\\n",
-    "    .filter(F.col(\"customer_id\") == 2002) \\\n",
+    "    .filter(F.col(\"customer_id\") == \"CUST020002\") \\\n",
     "    .count()\n",
     "\n",
     "display(\n",
     "    spark.createDataFrame([\n",
-    "        (\"Records with customer_id 2002\", deleted_check)\n",
+    "        (\"Records with customer_id CUST020002\", deleted_check)\n",
     "    ], [\"description\", \"count\"])\n",
     ")"
    ]
@@ -846,10 +847,10 @@
    "source": [
     "# Przygotuj dane do merge (mix updates i nowych rekordów)\n",
     "merge_data = spark.createDataFrame([\n",
-    "    (1001, \"Updated Customer Name\", 31, \"updated@example.com\", \"2023-12-01\", \"Diamond\"),  # Update\n",
-    "    (3001, \"Brand New Customer\", 29, \"brand.new@example.com\", \"2023-12-15\", \"Bronze\"),   # Insert\n",
-    "    (3002, \"Another New Customer\", 33, \"another.new@example.com\", \"2023-12-16\", \"Silver\") # Insert\n",
-    "], [\"customer_id\", \"name\", \"age\", \"email\", \"registration_date\", \"customer_tier\"])"
+    "    (\"CUST010001\", \"Updated\", \"Name\", \"updated@example.com\", \"+48 999 999 999\", \"Poznan\", \"WP\", \"Poland\", \"2023-12-01\", \"VIP\", \"Diamond\"),  # Update\n",
+    "    (\"CUST030001\", \"Brand\", \"New\", \"brand.new@example.com\", \"+48 777 777 777\", \"Wroclaw\", \"DS\", \"Poland\", \"2023-12-15\", \"Basic\", \"Bronze\"),   # Insert\n",
+    "    (\"CUST030002\", \"Another\", \"New\", \"another.new@example.com\", \"+48 888 888 888\", \"Lodz\", \"LD\", \"Poland\", \"2023-12-16\", \"Premium\", \"Silver\") # Insert\n",
+    "], [\"customer_id\", \"first_name\", \"last_name\", \"email\", \"phone\", \"city\", \"state\", \"country\", \"registration_date\", \"customer_segment\", \"customer_tier\"])"
    ]
   },
   {
@@ -894,14 +895,19 @@
     "    \n",
     "    WHEN MATCHED THEN\n",
     "        UPDATE SET\n",
-    "            name = source.name,\n",
-    "            age = source.age,\n",
+    "            first_name = source.first_name,\n",
+    "            last_name = source.last_name,\n",
     "            email = source.email,\n",
+    "            phone = source.phone,\n",
+    "            city = source.city,\n",
+    "            state = source.state,\n",
+    "            country = source.country,\n",
+    "            customer_segment = source.customer_segment,\n",
     "            customer_tier = source.customer_tier\n",
     "    \n",
     "    WHEN NOT MATCHED THEN\n",
-    "        INSERT (customer_id, name, age, email, registration_date, customer_tier)\n",
-    "        VALUES (source.customer_id, source.name, source.age, source.email, source.registration_date, source.customer_tier)\n",
+    "        INSERT (customer_id, first_name, last_name, email, phone, city, state, country, registration_date, customer_segment, customer_tier)\n",
+    "        VALUES (source.customer_id, source.first_name, source.last_name, source.email, source.phone, source.city, source.state, source.country, source.registration_date, source.customer_segment, source.customer_tier)\n",
     "\"\"\")"
    ]
   },
@@ -923,7 +929,7 @@
     "# Weryfikuj wyniki MERGE\n",
     "display(\n",
     "    spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_delta\")\n",
-    "    .filter(F.col(\"customer_id\").isin([1001, 3001, 3002]))\n",
+    "    .filter(F.col(\"customer_id\").isin([\"CUST010001\", \"CUST030001\", \"CUST030002\"]))\n",
     "    .orderBy(\"customer_id\")\n",
     ")"
    ]
@@ -1263,7 +1269,8 @@
     "# Wykonaj więcej zmian po włączeniu CDF\n",
     "spark.sql(f\"\"\"\n",
     "    INSERT INTO {CATALOG}.{BRONZE_SCHEMA}.customers_delta\n",
-    "    VALUES (4001, 'CDF Test Customer', 27, 'cdf@example.com', '2023-12-20', 'Bronze')\n",
+    "    (customer_id, first_name, last_name, email, phone, city, state, country, registration_date, customer_segment, customer_tier)\n",
+    "    VALUES ('CUST040001', 'CDF', 'TestCustomer', 'cdf@example.com', '+48 555 555 555', 'Szczecin', 'ZP', 'Poland', '2023-12-20', 'Basic', 'Bronze')\n",
     "\"\"\")"
    ]
   },
@@ -1285,7 +1292,7 @@
     "spark.sql(f\"\"\"\n",
     "    UPDATE {CATALOG}.{BRONZE_SCHEMA}.customers_delta\n",
     "    SET customer_tier = 'Gold'\n",
-    "    WHERE customer_id = 4001\n",
+    "    WHERE customer_id = 'CUST040001'\n",
     "\"\"\")"
    ]
   },
@@ -1315,15 +1322,19 @@
    "outputs": [],
    "source": [
     "# Batch read change data feed od określonej wersji\n",
+    "# Najpierw sprawdźmy aktualną wersję\n",
+    "current_version = spark.sql(f\"DESCRIBE HISTORY {CATALOG}.{BRONZE_SCHEMA}.customers_delta\").select(\"version\").first()[0]\n",
+    "cdf_start_version = max(0, current_version - 3)  # Ostatnie 3 wersje\n",
+    "\n",
     "changes_batch = spark.read \\\n",
     "    .format(\"delta\") \\\n",
     "    .option(\"readChangeFeed\", \"true\") \\\n",
-    "    .option(\"startingVersion\", 5) \\\n",
+    "    .option(\"startingVersion\", cdf_start_version) \\\n",
     "    .table(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_delta\")\n",
     "\n",
     "display(\n",
     "    changes_batch.select(\n",
-    "        \"customer_id\", \"name\", \"customer_tier\", \n",
+    "        \"customer_id\", \"first_name\", \"last_name\", \"customer_tier\", \n",
     "        \"_change_type\", \"_commit_version\", \"_commit_timestamp\"\n",
     "    )\n",
     ")"
@@ -1446,8 +1457,8 @@
     "delta_table = DeltaTable.forName(spark, f\"{CATALOG}.{BRONZE_SCHEMA}.customers_delta\")\n",
     "\n",
     "new_data = spark.createDataFrame([\n",
-    "    (5001, \"PySpark Customer\", 32, \"pyspark@example.com\", \"2023-12-25\", \"Silver\")\n",
-    "], [\"customer_id\", \"name\", \"age\", \"email\", \"registration_date\", \"customer_tier\"])"
+    "    (\"CUST050001\", \"PySpark\", \"Customer\", \"pyspark@example.com\", \"+48 666 666 666\", \"Bydgoszcz\", \"KP\", \"Poland\", \"2023-12-25\", \"Premium\", \"Silver\")\n",
+    "], [\"customer_id\", \"first_name\", \"last_name\", \"email\", \"phone\", \"city\", \"state\", \"country\", \"registration_date\", \"customer_segment\", \"customer_tier\"])"
    ]
   },
   {
@@ -1493,8 +1504,10 @@
     "# SQL approach\n",
     "spark.sql(f\"\"\"\n",
     "    MERGE INTO {CATALOG}.{BRONZE_SCHEMA}.customers_delta AS target\n",
-    "    USING (SELECT 5002 as customer_id, 'SQL Customer' as name, 30 as age, \n",
-    "                  'sql@example.com' as email, '2023-12-26' as registration_date, \n",
+    "    USING (SELECT 'CUST050002' as customer_id, 'SQL' as first_name, 'Customer' as last_name,\n",
+    "                  'sql@example.com' as email, '+48 333 333 333' as phone,\n",
+    "                  'Lublin' as city, 'LB' as state, 'Poland' as country,\n",
+    "                  '2023-12-26' as registration_date, 'Basic' as customer_segment,\n",
     "                  'Gold' as customer_tier) AS source\n",
     "    ON target.customer_id = source.customer_id\n",
     "    WHEN MATCHED THEN UPDATE SET *\n",
