--- a/DZIEN_3_Transformation_Governance_Integrations/02_lakeflow_pipelines.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/02_lakeflow_pipelines.ipynb
@@ -25,15 +25,17 @@
    "source": [
     "## Kontekst i wymagania\n",
     "\n",
-    "- **Dzień szkolenia**: Dzień 2 - Lakehouse & Delta Lake\n",
+    "- **Dzień szkolenia**: Dzień 3 - Transformation & Governance\n",
     "- **Typ notebooka**: Demo\n",
     "- **Wymagania techniczne**:\n",
-    "  - Databricks Runtime 13.0+ (zalecane: 14.3 LTS)\n",
+    "  - Databricks Runtime 16.4 LTS lub nowszy (zalecane: 17.3 LTS)\n",
     "  - Unity Catalog włączony\n",
     "  - Uprawnienia: CREATE TABLE, CREATE SCHEMA, SELECT, MODIFY\n",
-    "  - Klaster: Standard z minimum 2 workers\n",
+    "  - Klaster: Standard lub Serverless Compute\n",
     "  \n",
-    "**Uwaga:** Ten notebook demonstruje **SQL API** dla Lakeflow pipelines. Python API (@dp.table, @dp.materialized_view) jest alternatywą z tą samą funkcjonalnością."
+    "**Uwaga:** Ten notebook demonstruje **SQL API** dla Lakeflow SDP. Python API (`create_streaming_table()`, `table()`) jest alternatywą z tą samą funkcjonalnością.\n",
+    "\n",
+    "> **Aktualizacja (Czerwiec 2025):** Nazwa produktu zmieniła się z \"Delta Live Tables (DLT)\" na \"Lakeflow Spark Declarative Pipelines (SDP)\". Funkcjonalność pozostaje taka sama. Dodatkowo \"Databricks Jobs\" to teraz \"Lakeflow Jobs\"."
    ]
   },
   {
