--- a/DZIEN_3_Transformation_Governance_Integrations/03_lakeflow_jobs_orchestration.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/03_lakeflow_jobs_orchestration.ipynb
@@ -7,8 +7,6 @@
    "source": [
     "# Databricks Jobs Orchestration\n",
     "\n",
-    "**KION Training - Dzień 3**\n",
-    "\n",
     "---\n",
     "\n",
     "## Agenda\n",
@@ -39,9 +37,9 @@
    "id": "d7b08a70",
    "metadata": {},
    "source": [
-    "## 1. Wprowadzenie do Databricks Jobs\n",
+    "## 1. Wprowadzenie do Lakeflow Jobs\n",
     "\n",
-    "**Databricks Jobs** to zarządzany service orkiestracji dla:\n",
+    "**Lakeflow Jobs** (dawniej Databricks Jobs) to zarządzany service orkiestracji dla:\n",
     "- ETL/ELT pipelines\n",
     "- Machine Learning workflows\n",
     "- Scheduled reports\n",
@@ -49,19 +47,28 @@
     "\n",
     "### Kluczowe cechy:\n",
     "- **Multi-task workflows**: DAG (Directed Acyclic Graph)\n",
-    "- **Task types**: Notebook, DLT, SQL, dbt, Python wheel, JAR\n",
+    "- **Task types**: Notebook, Lakeflow SDP (dawniej DLT), SQL, dbt, Python wheel, JAR\n",
     "- **Scheduling**: cron, continuous, triggered\n",
     "- **Retry logic**: automatyczne retry przy błędach\n",
     "- **Alerting**: email, webhooks, integrations\n",
-    "- **Cost optimization**: spot instances, autoscaling\n",
+    "- **Cost optimization**: Serverless, spot instances, autoscaling\n",
     "\n",
-    "### Jobs vs DLT:\n",
+    "### 🆕 Serverless Jobs (zalecane od 2024)\n",
     "\n",
-    "| Feature | Databricks Jobs | Delta Live Tables |\n",
-    "|---------|----------------|-------------------|\n",
+    "**Serverless compute dla Jobs** eliminuje potrzebę konfiguracji klastrów:\n",
+    "- ✅ Near-zero startup time\n",
+    "- ✅ Automatic optimization przez Databricks\n",
+    "- ✅ Pay-per-use billing\n",
+    "- ✅ Autoscaling i Photon włączone domyślnie\n",
+    "- ✅ Performance Mode (od April 2025) - wybór między wydajnością a kosztami\n",
+    "\n",
+    "### Jobs vs Lakeflow SDP:\n",
+    "\n",
+    "| Feature | Lakeflow Jobs | Lakeflow SDP (DLT) |\n",
+    "|---------|---------------|-------------------|\n",
     "| Use Case | General orchestration | ETL pipelines |\n",
-    "| Task Types | Notebook, SQL, dbt, DLT | DLT only |\n",
-    "| Dependencies | Manual configuration | Automatic |\n",
+    "| Task Types | Notebook, SQL, dbt, SDP | SDP only |\n",
+    "| Dependencies | Manual configuration | Automatic (DAG) |\n",
     "| Data Quality | Custom code | Built-in expectations |\n",
     "| Flexibility | High | Opinionated |\n",
     "\n",
