Modyfikacje notebooków DZIEN_1, DZIEN_2 i DZIEN_3 - drobne poprawki

--- a/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
@@ -16,7 +16,7 @@
     }
    },
    "source": [
-    "# Wprowadzenie do Databricks Lakehouse - Demo\n",
+    "# Wprowadzenie do Databricks Lakehouse\n",
     "\n",
     "**Cel szkoleniowy:** Zrozumienie koncepcji Lakehouse, poznanie podstawowych elementów platformy Databricks oraz konfiguracji środowiska Unity Catalog.\n",
     "\n",
@@ -2371,21 +2371,21 @@
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "bronze",
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
-       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "CATALOG": {
@@ -2397,21 +2397,21 @@
       "label": null,
       "name": "CATALOG",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "ecommerce_platform_trainer",
       "label": null,
       "name": "CATALOG",
       "options": {
-       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
