--- a/DZIEN_1_Fundamentals_Exploration/03_transformations_sql_pyspark.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/03_transformations_sql_pyspark.ipynb
@@ -16,7 +16,7 @@
     }
    },
    "source": [
-    "# Podstawowe transformacje SQL i PySpark - Demo\n",
+    "# Podstawowe transformacje SQL i PySpark\n",
     "\n",
     "**Cel szkoleniowy:** Opanowanie podstawowych transformacji danych w PySpark DataFrame API i SQL, zrozumienie ekwiwalentności obu podejść, umiejętność wyboru odpowiedniego narzędzia do zadania\n",
     "\n",
