--- a/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
@@ -13,7 +13,7 @@
     }
    },
    "source": [
-    "# Czyszczenie i jakość danych - Demo\n",
+    "# Czyszczenie i jakość danych\n",
     "\n",
     "**Cel szkoleniowy:** Opanowanie technik identyfikacji i rozwiązywania problemów jakości danych, zrozumienie strategii obsługi wartości pustych, walidacji typów, deduplikacji i standaryzacji danych\n",
     "\n",
