--- a/DZIEN_2_Lakehouse_Delta_Lake/03_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/03_medallion_architecture.ipynb
@@ -16,7 +16,7 @@
     }
    },
    "source": [
-    "# Medallion Architecture - Demo\n",
+    "# Medallion Architecture\n",
     "\n",
     "**Cel szkoleniowy:** Opanowanie implementacji architektury medalionowej (Bronze → Silver → Gold) w Databricks.\n",
     "\n",
