--- a/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
@@ -16,7 +16,7 @@
     }
    },
    "source": [
-    "# Optymalizacja i najlepsze praktyki - Demo\n",
+    "# Optymalizacja i najlepsze praktyki\n",
     "\n",
     "**Cel szkoleniowy:** Opanowanie technik optymalizacji performance'u zapytań i tabel Delta w Databricks.\n",
     "\n",
