--- a/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
@@ -16,10 +16,10 @@
     }
    },
    "source": [
-    "# Demo 1: Zaawansowane Transformacje PySpark\n",
+    "# Zaawansowane Transformacje PySpark\n",
     "\n",
     "**Temat:** Advanced PySpark Transformations  \n",
-    "**Czas trwania:** 60 minut  \n",
+    "**Czas trwania:** 40 minut  \n",
     "**Typ:** Live coding demo + teoria\n",
     "\n",
     "---\n",
