--- a/DZIEN_2_Lakehouse_Delta_Lake/02_lakeflow_connection.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/02_lakeflow_connection.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "888da69b",
+   "metadata": {},
+   "source": [
+    "# Medallion Architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f1e39112",
    "metadata": {},
    "source": [
