--- a/00_setup.ipynb
+++ b/00_setup.ipynb
@@ -40,26 +40,14 @@
     }
    },
    "source": [
-    "## 📁 Architektura danych w szkoleniu\n",
+    "## Architektura danych w szkoleniu\n",
     "\n",
-    "Szkolenie używa **dwóch podejść do przechowywania danych** w zależności od dnia:\n",
+    "Szkolenie używa **volume  do przechowywania danych** :\n",
     "\n",
-    "### Dzień 1-2: Lokalne pliki → Delta Tables\n",
-    "- **Źródło**: Folder `dataset/` (CSV, JSON, Parquet)\n",
-    "- **Zmienna**: `DATASET_BASE_PATH` \n",
-    "- **Cel**: Załadowanie do Delta tables w schematach Bronze/Silver/Gold\n",
-    "- **Przykład**: `spark.read.csv(f\"{DATASET_BASE_PATH}/customers/customers.csv\")`\n",
-    "\n",
-    "### Dzień 3: Unity Catalog Volumes\n",
     "- **Źródło**: Unity Catalog Volumes (`/Volumes/ecommerce_platform_<user>/default/kion_datasets`)\n",
     "- **Zmienna**: `VOLUMES_BASE_PATH` (opcjonalne dla Dzień 3)\n",
     "- **Cel**: Demonstracja zaawansowanych feature'ów UC (DLT, Lakeflow, Governance)\n",
     "- **Przykład**: `spark.read.csv(\"/Volumes/ecommerce_platform_kzb/default/kion_datasets/customers.csv\")`\n",
-    "\n",
-    "### Dlaczego dwa podejścia?\n",
-    "- **Progresja edukacyjna**: Od prostych plików (Dzień 1) → Delta Lake (Dzień 2) → Unity Catalog (Dzień 3)\n",
-    "- **Real-world scenarios**: W produkcji często używa się Volumes dla managed data access w UC\n",
-    "- **Best practices**: Dzień 3 pokazuje, jak zarządzać danymi w enterprise environment\n",
     "\n",
     "---"
    ]
